--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <title>Miles by the Sea</title>
+    <title>miles away by the sea</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
